<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_item_home"
    android:layout_margin="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/const_1"
        app:cardCornerRadius="14dp"
        >

        <ImageView
            android:id="@+id/img_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/img_food1"
             />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_view">

        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/fruid_salat"
            android:fontFamily="@font/inter"
            android:textSize="14sp"
            android:layout_marginTop="6dp"
            android:textColor="@color/home_text_color" />

        <TextView
            android:id="@+id/tv_gram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_food_name"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/_230_g"
            android:fontFamily="@font/inter"
            android:textSize="12sp"
            android:layout_marginTop="6dp"
            android:textColor="@color/home_text_color" />

        <ImageView
            android:id="@+id/img_oval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_gram"
            app:layout_constraintStart_toEndOf="@id/tv_gram"
            android:src="@drawable/oval"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/tv_kcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_gram"
            app:layout_constraintStart_toEndOf="@id/img_oval"
            android:text="@string/_125_kcal"
            android:fontFamily="@font/inter"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/home_text_color" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>