<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backround"
    tools:context=".fragment.homefragment.PopularFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_back"
            android:layout_marginTop="24dp"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/tv_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/popular"
            android:fontFamily="@font/inter"
            android:textColor="@color/home_text_color"
            android:textSize="30sp"
            android:layout_marginTop="20dp"/>

        <androidx.cardview.widget.CardView
            android:id="@id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_category_name"
            app:layout_constraintStart_toStartOf="@id/img_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="12dp"
            android:backgroundTint="@color/white"
            android:layout_marginTop="14dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >


                <TextView
                    android:id="@+id/tv_name_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chicken_salad"
                    android:fontFamily="@font/inter"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="30dp"
                    android:textColor="@color/home_text_color"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_food_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_name_food"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:cardCornerRadius="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"

                    >

                    <ImageView
                        android:id="@+id/img_food"
                        android:layout_width="wrap_content"
                        android:layout_height="400dp"
                        android:src="@drawable/img1"
                        android:scaleType="centerCrop"
                        />
                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:id="@+id/linear_gram"
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/linear_protein"
                    app:layout_constraintTop_toBottomOf="@id/card_food_img"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_food_linear"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/calories_1"
                        android:textSize="16sp"
                        android:textColor="@color/main_text_color"
                        android:layout_marginTop="6dp"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tv_calories_gram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/_280_g"
                        android:textSize="16sp"
                        android:textColor="@color/home_text_color"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_protein"
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/card_food_img"
                    app:layout_constraintStart_toEndOf="@id/linear_gram"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_food_linear"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="PROTEIN"
                        android:textSize="16sp"
                        android:textColor="@color/main_text_color"
                        android:layout_marginTop="6dp"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tv_gram_protein"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/_65_g"
                        android:textSize="16sp"
                        android:textColor="@color/home_text_color"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_fat"
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/linear_gram"
                    app:layout_constraintStart_toStartOf="@id/linear_gram"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/shape_food_linear"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/fat"
                        android:textSize="16sp"
                        android:textColor="@color/main_text_color"
                        android:layout_marginTop="6dp"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tv_gram_fat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/_58_g"
                        android:textSize="16sp"
                        android:textColor="@color/home_text_color"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_carbs"
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/linear_protein"
                    app:layout_constraintStart_toEndOf="@id/linear_fat"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toTopOf="@id/linear_fat"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/shape_food_linear"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/carbs"
                        android:textSize="16sp"
                        android:textColor="@color/main_text_color"
                        android:layout_marginTop="6dp"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tv_gram_carbs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/_58_g"
                        android:textSize="16sp"
                        android:textColor="@color/home_text_color"
                        android:layout_marginTop="4dp"
                        android:layout_gravity="center"/>

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            android:layout_marginTop="4dp"
            android:layout_marginStart="20dp"
            >

            <TextView
                android:id="@+id/tv_food_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asparagus_with_meat"
                app:layout_constraintTop_toBottomOf="@id/card_view"
                app:layout_constraintStart_toStartOf="@id/card_view"
                android:layout_marginTop="20dp"
                android:textColor="@color/home_text_color"
                android:textSize="14sp"
                android:fontFamily="@font/inter"
                />

            <TextView
                android:id="@+id/tv_food_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter"
                android:text="равпаывпы"
                android:textColor="@color/home_text_color"
                android:textSize="14sp"/>



        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>